@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Fetch the newest version and show in status bar if newer version available
+
 Bug fixes:
 
 Other:
